--- a/app/modules/members/templates/members/portal/notifications.html
+++ b/app/modules/members/templates/members/portal/notifications.html
@@ -155,7 +155,7 @@
                                 >
                                     تأكيد القراءة
                                 </button>
-                                <a href="{{ notification.link_url if notification.link_url else url_for('portal.home') }}">فتح</a>
+                                <a href="{{ notification.link_url if notification.link_url else url_for('portal.member_portal_home') }}">فتح</a>
                             </div>
                         </div>
                     </article>
