--- a/app/modules/companies/templates/companies/register_company.html
+++ b/app/modules/companies/templates/companies/register_company.html
@@ -85,5 +85,5 @@
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', filename='members/js/company_registration_form.js') }}" defer></script>
+<script src="{{ url_for('company.static', filename='js/company_registration_form.js') }}" defer></script>
 {% endblock %}
